--- a/webox-admin/public/index.html
+++ b/webox-admin/public/index.html
@@ -28,7 +28,11 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+      <div style="display: flex;justify-content: center;align-items: center;width: 100vw;height: 100vh;">
+        <img src="./loading.gif" alt="loading" style="width: 50vw; height: 80vh;">
+      </div>
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
