--- a/webox-admin/public/index.html
+++ b/webox-admin/public/index.html
@@ -25,21 +25,71 @@
     -->
     <title>We Box</title>
     <style>
-      .loading {
+      .spin {
         position: absolute;
         top: 0;
         left: 0;
         right: 0;
         bottom: 0;
         margin: auto;
-        width: 120px;
+        font-size: 32px;
+        width: 1em;
+        height: 1em;
+        animation: rotateMove 1.2s infinite linear;
+      }
+      .spin-item {
+        position: absolute;
+        width: 14px;
+        height: 14px;
+        border-radius: 50%;
+        transform: scale(0.75);
+        opacity: 0.3;
+        background-color: #1677ff;
+        animation: opacityMove 1s infinite linear alternate;
+      }
+      .spin-item:nth-child(1) {
+        top: 0;
+        left: 0;
+      }
+      .spin-item:nth-child(2) {
+        top: 0;
+        right: 0;
+        animation-delay: 0.4s;
+      }
+      .spin-item:nth-child(3) {
+        left: 0;
+        bottom: 0;
+        animation-delay: 0.8s;
+      }
+      .spin-item:nth-child(4) {
+        right: 0;
+        bottom: 0;
+        animation-delay: 1.2s;
+      }
+      @keyframes rotateMove {
+        0% {
+          transform: rotate(0deg);
+        }
+        100% {
+          transform: rotate(360deg);
+        }
+      }
+      @keyframes opacityMove {
+        100% {
+          opacity: 1;
+        }
       }
     </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
-      <img class="loading" src="./loading.gif" alt="loading">
+      <div class="spin">
+        <div class="spin-item"></div>
+        <div class="spin-item"></div>
+        <div class="spin-item"></div>
+        <div class="spin-item"></div>
+      </div>
     </div>
     <!--
       This HTML file is a template.
